--- a/src/assets/scss/_properties.scss
+++ b/src/assets/scss/_properties.scss
@@ -1,11 +1,11 @@
-@import "scss/fonts";
+@import "assets/scss/fonts";
 
-@import "scss/colors";
+@import "assets/scss/colors";
 
-@import "scss/flexbox";
+@import "assets/scss/flexbox";
 
-@import "scss/mixins";
+@import "assets/scss/mixins";
 
-@import "scss/typography";
+@import "assets/scss/typography";
 
-@import "scss/breakpoints";
+@import "assets/scss/breakpoints";
