--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -32,12 +32,12 @@
             [ngClass]="{
     bold: tab.subtitle
     }"
-            [innerHTML]="tab.title | replaceLineBreaksPipe"
+            [innerHTML]="tab.title"
           ></span>
           @if (tab.subtitle) {
     <span
       class="subtitle"
-      [innerHTML]="tab.subtitle | replaceLineBreaksPipe"
+      [innerHTML]="tab.subtitle"
     ></span>
     }
     </div>
