--- a/src/assets/scss/_properties.scss
+++ b/src/assets/scss/_properties.scss
@@ -1,11 +1,11 @@
-@import "assets/scss/fonts";
+@import "./fonts";
 
-@import "assets/scss/colors";
+@import "./colors";
 
-@import "assets/scss/flexbox";
+@import "./flexbox";
 
-@import "assets/scss/mixins";
+@import "./mixins";
 
-@import "assets/scss/typography";
+@import "./typography";
 
-@import "assets/scss/breakpoints";
+@import "./breakpoints";
