--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,5 +1,5 @@
-@import "scss/colors";
-@import "scss/fonts";
+@import "./colors";
+@import "./fonts";
 
 @mixin font-($fontSize, $lineHeight) {
   font-size: $fontSize;
