--- a/src/app/core/components/page/page.component.html
+++ b/src/app/core/components/page/page.component.html
@@ -1,6 +1,6 @@
-<div class="wrapper">
-  <app-header></app-header>
-  <app-sidebar></app-sidebar>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
-</div>
+  <div class="page">
+      <app-sidebar [tabs]="tab"></app-sidebar>
+    <div class="page-content">
+      <app-header></app-header>
+    </div>
+  </div>
