--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -1,24 +1,38 @@
-$cl-black: #1e212b;
-$cl-green: #038726;
-$cl-green-light: #3cbd0d;
-$cl-green-hover: #026c1e;
-$cl-green-light-hover: #63ca3d;
-$cl-green-venom: #9ed110ff;
-$cl-green-calendar: #e6f3e9;
-$cl-gray: #696969;
-$cl-gray-audio: #e2e5e7;
-$cl-gray-light: #f3f4f5;
-$cl-gray-dark: #45464f;
-$cl-gray-middle: #d1d1d1;
-$cl-gray-light-bg: #f1f3f4;
-$cl-gray-scroll: #b3b3b3;
-$cl-gray-table-header: #e6e9ed;
-$cl-gray-table-border-bottom: #ddd;
-$cl-table-odd: #f7f9fa;
-$cl-white-bg: #ffffff;
-$cl-white: rgba($cl-white-bg, 0.9);
-$cl-blue: #0692d8;
-$cl-blue-middle: #1666bc;
-$cl-blue-tooltip: #3381d4;
-$cl-red: #ff2e24;
-$cl-red-light: #ed3e45;
+
+$primary-white: #FFFFFF;
+$primary-black: #000000;
+$primary-red: #ED2531;
+$primary-green: #26BA7F;
+
+$green-50: #E7F5F3;
+$green-100: #DBF0ED;
+$green-200: #B6E1DA;
+$green-300: #86CEC2;
+$green-400: #55BAA9;
+$green-500: #0C9C84;
+$green-600: #138674;
+$green-700: #196F64;
+$green-800: #234E4B;
+$green-900: #283D3F;
+
+$brand-50: #F7F6FD;
+$brand-100: #EEECFC;
+$brand-200: #D2CDF7;
+$brand-300: #C3BCF4;
+$brand-400: #B5ACF1;
+$brand-500: #A69BEE;
+$brand-600: #978AEC;
+$brand-700: #887AE9;
+$brand-800: #7C6CED;
+$brand-900: #7969E6;
+
+$neural-50: #FAFAFA;
+$neural-100: #F5F5F5;
+$neural-200: #E5E5E5;
+$neural-300: #D4D4D4;
+$neural-400: #A3A3A3;
+$neural-500: #737373;
+$neural-600: #525252;
+$neural-700: #404040;
+$neural-800: #262626;
+$neural-900: #171717;
