--- a/src/app/core/components/page/page.component.html
+++ b/src/app/core/components/page/page.component.html
@@ -3,7 +3,7 @@
 <div class="page">
   <div class="sidebar">
       <app-sidebar
-        (onChange)="navigate($event)"
+        (onChange)="changeCurrentTab($event)"
         [currentTab]="currentTab"
         [tabs]="tabs"></app-sidebar>
   </div>
