--- a/src/app/layout/current-benefits/current-benefits.component.html
+++ b/src/app/layout/current-benefits/current-benefits.component.html
@@ -10,9 +10,8 @@
 
 <div class="main-page">
   <div class="most-popular">
-
     <div class="most-popular__cards">
-      <app-benefits-cards [cards]="filteredMostPopularCards"></app-benefits-cards>
+      <app-benefits-cards [deadLine]="true" [cards]="filteredMostPopularCards"></app-benefits-cards>
     </div>
   </div>
 
