--- a/src/assets/scss/_font-family.scss
+++ b/src/assets/scss/_font-family.scss
@@ -31,3 +31,11 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Inter-thin";
+  src: url('../fonts/Inter_18pt-Thin.ttf') format('truetype'),
+  url('../fonts/Inter_18pt-Thin.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
