--- a/src/app/layout/main/main.component.html
+++ b/src/app/layout/main/main.component.html
@@ -1,11 +1,20 @@
-
+<div class="main-page">
+<div class="banner" [ngStyle]="{
+    background: 'url(assets/images/main/Banner.jpg) no-repeat',
+    'background-size': '100% 100%'
+  }">
+  <div class="banner-content">
+      <span>Найдите идеальные бонусы <br />
+        для вашего образа жизни!</span>
+  </div>
+</div>
 
 <div class="most-popular">
   <div class="most-popular__title">
     <span>Самые популярные</span>
   </div>
   <div class="most-popular__cards">
-    <app-benefits-cards  [deadLine]="true" [cards]="filteredMostPopularCards"></app-benefits-cards>
+    <app-benefits-cards  [cards]="filteredMostPopularCards"></app-benefits-cards>
   </div>
 </div>
 
@@ -14,6 +23,7 @@
     <span>Рекомендации для вас</span>
   </div>
   <div class="recommendations__cards">
-    <app-benefits-cards [deadLine]="true" [cards]="filteredRecommendationsCards"></app-benefits-cards>
+    <app-benefits-cards  [cards]="filteredRecommendationsCards"></app-benefits-cards>
   </div>
+</div>
 </div>
