changed style for accordion-card

--- a/src/app/shared/components/accordion-card/accordion-card.component.html
+++ b/src/app/shared/components/accordion-card/accordion-card.component.html
@@ -6,6 +6,7 @@
   @for (menu of menus; track menu; let i = $index) {
     <ng-container [class.active]="menu.active">
       @if (menus) {
+        <div class="accordion-card-container">
         <div
           class="menu"
           [ngClass]="{ 'has-border': hasBorder, opened: menu.active }"
@@ -13,8 +14,10 @@
         >
           <div class="menu__title" (click)="this.trigger(i)">
             <span [innerHTML]="menu.title "></span>
+            <div class="plusminus-container">
 
             <div class="plusminus"></div>
+            </div>
           </div>
           <div
             class="content"
@@ -22,6 +25,7 @@
           >
             <div class="content-text" [innerHTML]="menu.content"></div>
           </div>
+        </div>
         </div>
       }
     </ng-container>
