added wallet page

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -17,7 +17,8 @@
     </div>
     <div class="account-image" (click)="toggleDropdown()">
       <svg-icon src="assets/icons/account/account-logo.svg"/>
-      <app-header-menu [isVisible]="isDropdownVisible"></app-header-menu>
-    </div>
+      <app-header-menu
+        [isVisible]="isDropdownVisible">
+      </app-header-menu>    </div>
   </div>
 </div>
