--- a/src/app/layout/main/main.component.scss
+++ b/src/app/layout/main/main.component.scss
@@ -8,7 +8,7 @@
   padding: 24px;
   background-color: $neutral-100;
 
-  overflow-y: auto; // Добавьте скроллинг по вертикали
+  overflow-y: auto;
   height: 83vh;
 
 .banner{
