--- a/src/app/shared/components/notifications/notifications.component.html
+++ b/src/app/shared/components/notifications/notifications.component.html
@@ -1,3 +1,5 @@
+<a routerLink="/notifications">
 <div class="notifications">
   <svg-icon src="assets/icons/notifications/bell-icon.svg"></svg-icon>
 </div>
+</a>
