--- a/src/app/core/components/header-menu/header-menu.component.html
+++ b/src/app/core/components/header-menu/header-menu.component.html
@@ -1,11 +1,11 @@
 @if (isVisible){
-  <div class="dropdown-menu">
+  <div class="dropdown-menu"  #dropdownMenu>
   <div class="user-info">
     <img src="assets/icons/account/account-logo.svg" alt="Profile Picture" class="profile-pic"/>
     <span>Эвелина</span>
     <span class="points">10</span>
   </div>
-  <div class="menu-item">Кошелёк</div>
+  <div class="menu-item" >Кошелёк</div>
   <div class="menu-item">Настройки</div>
   <div class="menu-item">Выйти</div>
 </div>
