--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -37,6 +37,18 @@
   font-family: 'Inter-regular';
 }
 
+@mixin paragraph-semibold {
+  @include font-(16px, 24px);
+  font-family: 'Inter-semibold';
+}
+
+@mixin xxs {
+  @include font-(12px, 14px);
+  font-family: 'Inter-regular';
+}
+
+
+
 @mixin description {
   @include font-(14px, 22px);
   font-family: 'Inter-regular';
