--- a/src/app/layout/current-benefits/current-benefits.component.scss
+++ b/src/app/layout/current-benefits/current-benefits.component.scss
@@ -5,11 +5,45 @@
   @include flex-direction(column);
 
   @include gap(24px);
+
   padding: 24px;
   background-color: $neutral-100;
 
   overflow-y: auto; // Добавьте скроллинг по вертикали
   height: 83vh;
+
+
+    .categories {
+      @include flexbox;
+      @include align-items(center);
+      @include gap(16px);
+      border-radius: 8px;
+      box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+      padding: 8px;
+      background-color: $primary-white;
+
+      button {
+        padding: 8px 16px;
+        background-color: $primary-white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        color: $neutral-400;
+        transition: background-color 0.3s;
+
+        &:hover {
+          background-color: $neutral-200;
+        }
+
+
+        &.active {
+          background-color:  $neutral-900;
+          color: $primary-white;
+        }
+      }
+    }
+  }
+
 
   .banner{
     @include flexbox;
@@ -46,31 +80,6 @@
       font-family: 'Inter-regular';
     }
   }
-}
-.categories {
-  @include flexbox;
-  @include gap(16px);
-  margin-bottom: 24px;
 
-  button {
-    padding: 8px 16px;
-    background-color: $neutral-200;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s;
 
-    &:hover {
-      background-color: $neutral-300;
-    }
 
-    &:focus {
-      outline: none;
-    }
-
-    &.active {
-      background-color:  $neutral-300;
-      color: $primary-white;
-    }
-  }
-}
