--- a/src/app/layout/wallet/wallet.component.html
+++ b/src/app/layout/wallet/wallet.component.html
@@ -4,7 +4,10 @@
     'background-size': '100% 100%'
   }">
     <div class="banner-content">
-     Ваш баланс
+     <span>Ваш баланс</span>
+      <div class="coins">
+      <app-coins [coins]="10"></app-coins>
+      </div>
     </div>
   </div>
 
