--- a/src/app/shared/components/coins/coins.component.html
+++ b/src/app/shared/components/coins/coins.component.html
@@ -1,6 +1,9 @@
 <a routerLink="/wallet">
+  <div class="coins-container">
 <div class="coins">
 <span>{{coins}}</span>
   <svg-icon src="assets/icons/coins.svg"></svg-icon>
 </div>
+  </div>
+
 </a>
