--- a/src/app/layout/current-benefits/current-benefits.component.html
+++ b/src/app/layout/current-benefits/current-benefits.component.html
@@ -1,14 +1,15 @@
 
-<div class="categories">
-  <button
-    *ngFor="let category of ['Все', 'Здоровье', 'Спорт', 'Питание', 'Обучение и развитие', 'Семья', 'Комфорт и удобства', 'Прочие']"
-    [class.active]="isCategorySelected(category)"
-    (click)="toggleCategory(category)">
-    {{category}}
-  </button>
-</div>
 
 <div class="main-page">
+    <div class="categories">
+      @for (category of categorylist; track category){
+      <button
+        [class.active]="isCategorySelected(category)"
+        (click)="toggleCategory(category)">
+        {{category}}
+      </button>
+      }
+    </div>
   <div class="most-popular">
     <div class="most-popular__cards">
       <app-benefits-cards [deadLine]="true" [cards]="filteredMostPopularCards"></app-benefits-cards>
