efes added to firebase

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -56,8 +56,10 @@
     }
   </div>
 </div>
-  <div class="settings">
+
+  <a class="settings" routerLink="/settings">
     <svg-icon src="/assets/icons/settings.svg"></svg-icon>
     <span>Настройки</span>
-  </div>
+  </a>
+
 </div>
