--- a/src/app/core/components/sidebar/sidebar.component.scss
+++ b/src/app/core/components/sidebar/sidebar.component.scss
@@ -15,75 +15,83 @@
   }
 
 
-  .tabs-container{
-  @include flexbox;
-  @include flex-direction(column);
-  @include gap(40px);
+  .tabs-container {
+    @include flexbox;
+    @include flex-direction(column);
+    @include gap(40px);
 
-    .logo-title{
+    .logo-title {
 
-      a{
+      a {
         @include flexbox;
         @include align-items(center);
         @include gap(16px);
         @include heading_4;
         color: $brand-900;
         text-decoration: none;
-      .logo{
-        width: 34px;
-        height: 34px;
+
+        .logo {
+          width: 34px;
+          height: 34px;
+        }
       }
     }
+
+    &.sticky {
+      position: sticky;
     }
 
-  &.sticky {
-    position: sticky;
-  }
-
-  .tabs {
-    @include flexbox;
-    @include flex-direction(column);
-
-    .tab-wrapper {
+    .tabs {
       @include flexbox;
-      padding: 8px 0;
+      @include flex-direction(column);
 
-      .tab {
+      .tab-wrapper {
         @include flexbox;
-        @include align-items(center);
-        @include gap(16px);
-        width: 100%;
-        padding: 12px 16px;
+        padding: 8px 0;
 
-        user-select: none;
-        cursor: pointer;
+        .tab {
+          @include flexbox;
+          @include align-items(center);
+          @include gap(16px);
+          width: 100%;
+          padding: 12px 16px;
 
-        @include paragraph;
+          user-select: none;
+          cursor: pointer;
+
+          @include paragraph;
 
 
-        &.active {
-          color: $brand-900;
-          background: $brand-100;
-          border-radius: 8px;
-          cursor: default;
+          &.active {
+            color: $brand-900;
+            background: $brand-100;
+            border-radius: 8px;
+            cursor: default;
 
-          svg-icon {
-            path {
-              fill: $brand-900
+            svg-icon {
+              path {
+                fill: $brand-900
+              }
             }
           }
         }
       }
-    }}
+    }
   }
 
-  .settings{
-    @include flexbox;
-    @include align-items(center);
-    @include gap(16px);
-    padding: 16px 12px;
 
-    margin-top: auto;
+    .settings {
+      @include flexbox;
+      @include align-items(center);
+      @include gap(16px);
+      padding: 16px 12px;
 
-  }
+      margin-top: auto;
+
+      color: $primary-black;
+      text-decoration: none;
+      cursor: pointer;
+
+    }
+
 }
